--- a/index.html
+++ b/index.html
@@ -22,18 +22,28 @@
         console.log('ServiceWorker registration failed: ', err);
     });
     }
-    // vue.jsの設定関係
-    var app = new Vue({
-      el: '#app',
-      data: {
-        message: 'Hello Vue!'
-      },
-      methods: {
-        reverseMessage: function () {
-          this.message = this.message.split('').reverse().join('')
-        }
+  const { createApp, ref } = Vue
+
+  createApp({
+    setup() {
+      const message = ref('Hello vue!')
+      return {
+        message
       }
-    });
+    }
+  }).mount('#app')
+    // vue.jsの設定関係
+  //  var app = new Vue({
+  //    el: '#app',
+  //    data: {
+ //       message: 'Hello Vue!'
+  //    },
+ //     methods: {
+  //      reverseMessage: function () {
+   //       this.message = this.message.split('').reverse().join('')
+    //    }
+ //     }
+ //   });
     </script>
   </body>
 </html>
