--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     setup() {
       const message = ref('Hello vue3!')
       function reverseMessage() {
-        this.message = this.message.split('').reverse().join('')
+        this.message = 'hello!! ~3'
       }
       return { message,  reverseMessage }
     }
