--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div id="app">
         <p>{{ message }}</p>
-        <button @click="increment">{{count}}</button>
+        <button @click="increment">{{num}}</button>
      </div>
     <script>
     // service workerの登録関係
