--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div id="app">
         <p>{{ message }}</p>
         <button @click="increment">{{num}}</button>
+      {{num}}
      </div>
     <script>
     // service workerの登録関係
