--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   createApp({
     setup() {
-      const message = ref('Hello vue3!')
+      let message = ref('Hello vue3!')
       const num=ref(0)
       function flash() {
         message='\\flash//'
