--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     setup() {
       let message = ref('Hello vue3!')
       const num=ref(0)
-      const flash = () =>message.value='\\flash//'
+      const flash = () => message.value='//flash//'
       const increment = () => num.value++
       return { message,  num ,increment,flash }
     }
